@@ -139,3 +139,7 @@ runtime.datasource.logStartupMetrics=true
 runtime.realTimeTimer.defaultTaskQueueSize=0
 #When a task queue is full should the waiting tasks be discarded and replaced with the most recent
 runtime.realTimeTimer.flushTaskQueueOnReject=false
+
+#Report Javascript Execution Times at INFO Level logging
+# add this to log4j.xml   <category name="org.perf4j.TimingLogger"><level value="info"/></category>
+runtime.javascript.metrics=false
