@@ -1,6 +1,7 @@
 *Version 2.8.0*
 * Upgrade core-private for new login process
 * Adding quantization and cron pattern options for all eligible polling data sources
+* Adding runtime.javascript.metrics. env property to log javascript execution times of the ScriptEngine
 
 *Version 2.7.12*
 * ETag Support
